# Marine_Robotics_HIL_Project_Chrono_ROS2-Controls

./: README.md  chrono_flap_node.cpp  param_ID
install/: local_setup.sh  setup.sh
install/chrono_flap_sim/share/ament_index/resource_index/parent_prefix_path/: chrono_flap_sim
install/chrono_flap_sim/share/chrono_flap_sim/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hil_odrive_ros2_control/share/hil_odrive_ros2_control/: package.ps1  package.sh
install/hil_odrive_ros2_control/share/hil_odrive_ros2_control/launch/: motor_control.launch.py
install/odrive_ros2_control/share/odrive_ros2_control/: package.ps1  package.sh
install/odrive_velocity_pid/share/odrive_velocity_pid/: local_setup.sh  package.ps1  package.sh
log/: latest_build
src/chrono_flap_sim/: CMakeCache.txt  CMakeLists.txt  README.md  package.xml
src/chrono_flap_sim/doc/: hil_mode.md
src/chrono_flap_sim/include/chrono_flap_sim/: shadow_pid_controller.hpp
src/chrono_flap_sim/launch/: sil_mode.launch.py
src/chrono_flap_sim/src/: chrono_flap_node.cpp
src/hil_odrive_ros2_control/: README.md
src/hil_odrive_ros2_control/description/urdf/: motor.urdf.xacro
src/hil_odrive_ros2_control/launch/: hil_mode.launch.py  motor_control.launch.py  parallel_mode.launch.py
src/hil_torque_mixer/: CMakeLists.txt  README.md  package.xml
src/hil_torque_mixer/src/: hil_torque_mixer_node.cpp
src/odrive_velocity_pid/: README.md
src/odrive_velocity_pid/src/: velocity_pid_node.cpp
